# ai-voice-portfolio

./: .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  PORTFOLIO-PLAN.md  README.md  netlify.toml  package-lock.json  package.json
docs/: architecture.md  voice-agent.md  web.md
scripts/: build-voice-kb.ts
src/: mdx-components.tsx
src/actions/: contact.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/hire/: page.tsx
src/app/mentorship/: page.tsx
src/app/privacy/: page.tsx
src/app/speaking/: page.tsx
src/components/booking/: CalEmbed.tsx  CalProvider.tsx
src/components/contact/: ContactForm.tsx  ContactModal.tsx  IntentPicker.tsx
src/components/layout/: Nav.tsx  (+4 more)
src/content/: case-studies.ts  experience.ts  hire.ts  index.ts  mentorship.ts  nav.ts  services.ts  site.ts  skills.ts  speaking.ts
src/lib/: contact-modal-event.ts  icons.ts  intents.ts  storage-keys.ts  text-size.ts  theme.ts
src/types/: content.ts
voice-agent/: .env.example  README.md  livekit.toml  pyproject.toml
voice-agent/scripts/: cartesia_clone.py  init_sheet_header.py
voice-agent/src/: agent.py  booking.py  cal_client.py  cerebrium_tts.py  kb.py  kokoro_tts.py  lead.py  net.py  notify.py  portfolio.py  portfolio_kb.json  root_agent.py  rpc.py  sheets.py
voice-agent/tests/: conftest.py  test_behavior.py  test_booking_flow.py  test_booking_helpers.py  test_cal_client.py  test_flush.py  test_kb.py  test_lead.py  test_notify.py  test_tools.py
voice-agent/tests/fixtures/: cal_slots.json
web/: .env.example  .gitignore  .mcp.json.example  README.md  next.config.ts  package-lock.json  package.json
web/scripts/: build-voice-kb.ts
web/src/: mdx-components.tsx
(+85 files in other folders)
