[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voice-portfolio-agent"
version = "1.0.0"
description = "Voice AI agent for AI Voice Portfolio: a guided spoken tour that books calls and captures leads."
requires-python = ">=3.10, <3.15"
authors = [{ name = "Neeraj", email = "neeraj.aideveloper@gmail.com" }]
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    "google-auth>=2.53.0",
    "livekit-agents[silero,turn-detector]==1.5.12",
    "livekit-plugins-ai-coustics~=0.2",
    "livekit-plugins-deepgram>=1.5.12",
    "livekit-plugins-openai>=1.5.12",
    "python-dotenv",
]

[project.urls]
Homepage = "https://hineeraj.com"
Repository = "https://github.com/Neeraj-2311/ai-voice-portfolio"
Issues = "https://github.com/Neeraj-2311/ai-voice-portfolio/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
# yarl 1.24.1 was published with only a cp310 wheel and no sdist, so it can't
# install on Python 3.11+. Remove this once upstream uploads the remaining wheels.
constraint-dependencies = ["yarl<1.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
